--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "hhtps://Lifo123.github.io/MetaTag-Editer/",
   "name": "google-search-results",
   "private": true,
   "version": "0.0.0",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
