--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "hhtps://Lifo123.github.io/MetaTag-Editer/",
+  "homepage": "hhtps://Lifo123.github.io/MetaTag-Editor/#/",
   "name": "google-search-results",
   "private": true,
   "version": "0.0.0",
